# rust-design-patterns

./: .gitignore  Cargo.toml  README.md
behavioral/chain_of_responsability/: Cargo.toml
behavioral/command/: Cargo.toml
behavioral/command/fn_ptr/: Cargo.toml
behavioral/command/fn_trait_objects/: Cargo.toml
behavioral/iterator/standard/src/: main.rs
behavioral/mediator/static_mediator/: Cargo.toml
creational/abstract_factory/app/: Cargo.toml
creational/abstract_factory/app-dyn/: Cargo.toml
creational/abstract_factory/app-dyn/src/: main.rs  render.rs
creational/abstract_factory/app/src/: main.rs  render.rs
creational/abstract_factory/gui/src/: button.rs  checkbox.rs  factories.rs  lib.rs
creational/abstract_factory/macos-gui/: Cargo.toml
creational/abstract_factory/macos-gui/src/: button.rs  checkbox.rs  factory.rs
creational/abstract_factory/windows-gui/: Cargo.toml
creational/abstract_factory/windows-gui/src/: button.rs  checkbox.rs  factory.rs
creational/builder/src/: components.rs  main.rs
creational/builder/src/builders/: car.rs  car_manual.rs  mod.rs
creational/builder/src/cars/: mod.rs
creational/factory/src/: main.rs
src/: lib.rs
src/creational/factory/: html_gui.rs  init.rs  windows_gui.rs
structural/flyweight/src/: main.rs
structural/proxy/src/: main.rs
structural/proxy/src/server/: application.rs  mod.rs  nginx.rs  server_struct.rs
tests/: test_creational.rs
