[workspace]
resolver = "2"
members = [
    "creational/factory",
    "creational/abstract_factory/gui",          # lib
    "creational/abstract_factory/macos-gui",    # lib
    "creational/abstract_factory/windows-gui",  # lib
    "creational/abstract_factory/app",          # bin
    "creational/abstract_factory/app-dyn",      # bin
]