[workspace]
resolver = "2"
members = [
    "structural/adapter",
    "structural/bridge",
    "structural/composite",
    "structural/decorator",
    "structural/facade",
    "creational/factory",
    "creational/builder",
    "creational/prototype/safe",
    "creational/prototype/lazy",
    "creational/prototype/mutex",
    "creational/abstract_factory/gui",          # lib
    "creational/abstract_factory/macos-gui",    # lib
    "creational/abstract_factory/windows-gui",  # lib
    "creational/abstract_factory/app",          # bin
    "creational/abstract_factory/app-dyn",      # bin
]