[workspace]
resolver = "2"
members = [
    "behavioral/chain_of_responsability",
    "behavioral/command/trait_objects",
    "behavioral/command/fn_ptr",
    "behavioral/command/fn_trait_objects",
    "behavioral/iterator/standard",
    "behavioral/iterator/custom",
    "behavioral/mediator/dynamic",
    "behavioral/mediator/static_mediator",
    "structural/adapter",
    "structural/bridge",
    "structural/composite",
    "structural/decorator",
    "structural/facade",
    "structural/proxy",
    "structural/flyweight",
    "creational/factory",
    "creational/builder",
    "creational/prototype/safe",
    "creational/prototype/lazy",
    "creational/prototype/mutex",
    "creational/abstract_factory/gui",          # lib
    "creational/abstract_factory/macos-gui",    # lib
    "creational/abstract_factory/windows-gui",  # lib
    "creational/abstract_factory/app",          # bin
    "creational/abstract_factory/app-dyn",      # bin
]